[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/game/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/materials/PlayerMaterial.tres" type="Material" id=2]
[ext_resource path="res://assets/audio/jump1.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/jump5.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/jump7.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/jump6.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/jump4.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/jump2.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/jump3.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/models/player.obj" type="ArrayMesh" id=10]

[sub_resource type="SphereShape" id=1]

[node name="Player" type="KinematicBody"]
input_ray_pickable = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Jump1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 20.0

[node name="Jump2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
unit_db = 20.0

[node name="Jump3" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 20.0

[node name="Jump4" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 20.0

[node name="Jump5" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 20.0

[node name="Jump6" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 20.0

[node name="Jump7" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 20.0

[node name="player" type="MeshInstance" parent="."]
transform = Transform( 0.8, 0, 0, 0, -3.49691e-08, 0.8, 0, -0.8, -3.49691e-08, 0, 0, 0 )
mesh = ExtResource( 10 )
material/0 = ExtResource( 2 )
